# market-translator

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: rate_limits.yaml
data/samples/: catalog_sample.csv  catalog_spapi.jsonl
data/training/: normalizer_examples.jsonl
docker/: Dockerfile  docker-compose.yml
scripts/: seed_samples.py  spapi_marketplaces.sh
src/app/: main.py
src/app/routers/: ebay.py  health.py  metrics.py  review.py  translate.py
src/channels/: amazon.py  base.py  ebay.py
src/dspylocal/: normalizer.py
src/market_translator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: hf_models.py  ptd_validator.py
src/pipeline/: graph.py  state.py
src/pipeline/nodes/: map_schema.py  plan_batches.py  reconcile.py  upsert.py  validate.py
src/rate_limit/: limiter.py
src/schema/mapping/: amazon.yaml  ebay.yaml  loader.py
src/storage/: db.py
src/utils/: logging.py
tests/: test_mapping.py
